crates/pathfinder-operator/yaml/validator.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: validator-attestation
spec:
  serviceName: "validator-attestation"
  replicas: 1
  selector:
    matchLabels:
      app: validator-attestation
  template:
    metadata:
      labels:
        app: validator-attestation
    spec:
      containers:
        - name: validator-attestation
          image: ghcr.io/eqlabs/starknet-validator-attestation
          args:
            - "--staking-contract-address"
            - "0x00ca1702e64c81d9a07b86bd2c540188d92a2c73cf5cc0e508d949015e7e84a7"
            - "--attestation-contract-address"
            - "0x010398fe631af9ab2311840432d507bf7ef4b959ae967f1507928f5afe888a99"
            - "--staker-operational-address"
            - "$(OPERATIONAL_ADDRESS)"
            - "--node-url"
            - "$(NODE_URL)"
            - "--local-signer"
