crates/pathfinder-operator/yaml/deployment.yaml
---
# Source: pathfinder-operator/templates/service.yaml
# Expose the http port of the service
apiVersion: v1
kind: Service
metadata:
  name: release-name-pathfinder-operator
  namespace: default
  labels:
    helm.sh/chart: pathfinder-operator-0.1.0
    app.kubernetes.io/name: pathfinder-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: release-name-pathfinder-operator
---
# Source: pathfinder-operator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pathfinder-operator
  namespace: default
  labels:
    helm.sh/chart: pathfinder-operator-0.1.0
    app.kubernetes.io/name: pathfinder-operator
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pathfinder-operator
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pathfinder-operator
        app.kubernetes.io/instance: release-name
      annotations:
        kubectl.kubernetes.io/default-container: pathfinder-operator
    spec:
      serviceAccountName: release-name-pathfinder-operator
      securityContext:
        {}
      containers:
      - name: pathfinder-operator
        image: ghcr.io/runelabsxyz/pathfinder-operator:latest
        imagePullPolicy: Always
        securityContext:
          {}
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 100Mi
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
