crates/pathfinder-operator/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainnet-node
spec:
  selector:
    pathfinder.runelabs.xyz/network: mainnet
  ports:
    - protocol: TCP
      port: 9545
      targetPort: 9545
